k8s/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-search-db
  namespace: test-search
spec:
  type: NodePort
  ports:
  - port: 5432
  selector:
    app: test-search-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-search-db
  namespace: test-search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-search-db
  template:
    metadata:
      labels:
        app: test-search-db
    spec:
      containers:
      - name: test-search-db
        image: postgres:12.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: test-search-db-claim
