k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-search-ingress
  namespace: test-search
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - test-search.fbandrey.com
    secretName: search-fbandrey-tls
  rules:
  - host: test-search.fbandrey.com
    http:
      paths:
      - backend:
          serviceName: test-search-ror
          servicePort: 3000
